<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bakgrondsort">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sortButton"
        app:layout_constraintBottom_toTopOf="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:text="@string/sort"
        android:backgroundTint="#CDDC39"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        app:layout_constraintTop_toBottomOf="@id/sortButton"
        app:layout_constraintBottom_toTopOf="@+id/student1"
        android:layout_width="match_parent"
        android:text="@string/students_score_in_class"
        android:textColor="#FFC107"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/x4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/student1"
        android:layout_width="match_parent"
        android:text="@string/alireza_score_18"
        app:layout_constraintBottom_toTopOf="@+id/student2"
        android:textSize="@dimen/x3"
        android:textColor="#E8FF00"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/x13"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/student2"
        android:layout_width="match_parent"
        android:text="@string/mohamadreza_score_18"
        android:textSize="@dimen/x3"
        android:textColor="#E8FF00"
        app:layout_constraintBottom_toTopOf="@+id/student3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student1"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/x13"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/student3"
        android:layout_width="match_parent"
        android:text="@string/bahar_score_18"
        android:textSize="@dimen/x3"
        android:textColor="#E8FF00"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/student4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student2"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/x13"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/student4"
        android:layout_width="match_parent"
        android:text="@string/zahra_score_18"
        android:textSize="@dimen/x3"
        android:textColor="#E8FF00"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/student5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student3"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/x13"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/student5"
        android:layout_width="match_parent"
        android:text="@string/setare_score_18"
        android:textSize="@dimen/x3"
        android:textColor="#E8FF00"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/student6"
        app:layout_constraintTop_toBottomOf="@+id/student4"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/x13"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/student6"
        android:layout_width="match_parent"
        android:text="@string/mahdiyar_score_18"
        android:textSize="@dimen/x3"
        android:textColor="#E8FF00"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student5"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/firstButton"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="@dimen/x13"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/firstButton"
        android:layout_width="match_parent"
        android:text="@string/let_s_go_see_your_class_score"
        android:backgroundTint="#FFC107"
        app:layout_constraintTop_toBottomOf="@+id/student6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/x3"
        android:layout_marginEnd="@dimen/x3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"/>




</androidx.constraintlayout.widget.ConstraintLayout>